--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <h1>Computer vision</h1>
+    <form action="">
+    <label for="fname">Insert URL or type prompt:</label><br>
+    <input type="text" id="fname" name="fname" placeholder="Insert URL or textual prompt to generate an image" ><br>
+    <input type="submit" value="Analyze">
+    <input type="submit" value="Generate">
+    </form>
   </body>
+
 </html>
